@@ -10,6 +10,7 @@
 
 
 Version 4.1.6
+ - Added: MediaList Page: Added "Notes" link in Lightbox window when Lightbox installed (windmillway)
  - Fixed: Lightbox: Corrected white rectangle appearing when closing Lighbox Image, Improved fast mouseover displacement of Tooltip
  - Fixed: Lightbox: Fixed Image Distortion when at low browser resolution when clicking previous or next buttons (windmillway)
  - Added: Lightbox: New Notes Display Link on Enlarged Lightbox Images.
